@@ -1,6 +1,7 @@
 package de.neemann.digital.gui.components.modification;
 
 import de.neemann.digital.draw.elements.Circuit;
+import de.neemann.digital.draw.library.ElementLibrary;
 
 /**
  * Interface to implement the events used to be reverted
@@ -12,7 +13,8 @@ public interface Modification {
      * Performs a modification on the given circuit
      *
      * @param circuit the circuit to modify
+     * @param library the library
      */
-    void modify(Circuit circuit);
+    void modify(Circuit circuit, ElementLibrary library);
 
 }
